Comment out hardcoded cards

--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -22,42 +22,42 @@
                 <a href="/balance" class="menu__option">Top up balance</a>
             </section>
             <section class="cards">
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_payment">Awaiting payment</p>
-                </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_beaten">Beaten</p>
-                </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">You are the last</p>
-                </div>
+<!--                <div class="card">-->
+<!--                    <div class="card__gallery">-->
+<!--                        <div class="card__control card__control_position_left">◄</div>-->
+<!--                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">-->
+<!--                        <div class="card__control card__control_position_right">►</div>-->
+<!--                    </div>-->
+<!--                    <h3 class="card__name">Mona Lisa</h3>-->
+<!--                    <h4 class="card__owner">Leonardo Da Vinci</h4>-->
+<!--                    <p class="card__price">$100M</p>-->
+<!--                    <p class="card__time">21.05.2024</p>-->
+<!--                    <p class="card__status card__status_payment">Awaiting payment</p>-->
+<!--                </div>-->
+<!--                <div class="card">-->
+<!--                    <div class="card__gallery">-->
+<!--                        <div class="card__control card__control_position_left">◄</div>-->
+<!--                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">-->
+<!--                        <div class="card__control card__control_position_right">►</div>-->
+<!--                    </div>-->
+<!--                    <h3 class="card__name">Mona Lisa</h3>-->
+<!--                    <h4 class="card__owner">Leonardo Da Vinci</h4>-->
+<!--                    <p class="card__price">$100M</p>-->
+<!--                    <p class="card__time">21.05.2024</p>-->
+<!--                    <p class="card__status card__status_beaten">Beaten</p>-->
+<!--                </div>-->
+<!--                <div class="card">-->
+<!--                    <div class="card__gallery">-->
+<!--                        <div class="card__control card__control_position_left">◄</div>-->
+<!--                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">-->
+<!--                        <div class="card__control card__control_position_right">►</div>-->
+<!--                    </div>-->
+<!--                    <h3 class="card__name">Mona Lisa</h3>-->
+<!--                    <h4 class="card__owner">Leonardo Da Vinci</h4>-->
+<!--                    <p class="card__price">$100M</p>-->
+<!--                    <p class="card__time">21.05.2024</p>-->
+<!--                    <p class="card__status card__status_last">You are the last</p>-->
+<!--                </div>-->
             </section>
         </main>
     </div>
