--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -27,19 +27,19 @@
                     </div>
                     <h3 class="card__name">New lot</h3>
                 </a>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <!-- On Sale, Not Started, Sold-->
-                    <p class="card__status card__status_last">On Sale</p>
-                </div>
+<!--                <div class="card">-->
+<!--                    <div class="card__gallery">-->
+<!--                        <div class="card__control card__control_position_left">◄</div>-->
+<!--                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">-->
+<!--                        <div class="card__control card__control_position_right">►</div>-->
+<!--                    </div>-->
+<!--                    <h3 class="card__name">Mona Lisa</h3>-->
+<!--                    <h4 class="card__owner">Leonardo Da Vinci</h4>-->
+<!--                    <p class="card__price">$100M</p>-->
+<!--                    <p class="card__time">21.05.2024</p>-->
+<!--                    &lt;!&ndash; On Sale, Not Started, Sold&ndash;&gt;-->
+<!--                    <p class="card__status card__status_last">On Sale</p>-->
+<!--                </div>-->
             </section>
         </main>
     </div>
