--- a/main-auction-service/src/main/resources/frontend/balance.html
+++ b/main-auction-service/src/main/resources/frontend/balance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add new lot</title>
+    <title>Balance deposit</title>
     <link rel="stylesheet" href="/pages/balance.css">
     <script src="/js/refillBalance.js"></script>
     <script src="/js/getUserId.js"></script>
