--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -43,5 +43,9 @@
             </section>
         </main>
     </div>
+    <script src="/js/currency.js"></script>
+    <script src="/js/getUserId.js"></script>
+    <script src="/js/gallery.js"></script>
+    <script src="/js/getLotsByUser.js"></script>
 </body>
 </html>
