User data display

--- a/main-auction-service/src/main/resources/frontend/data.html
+++ b/main-auction-service/src/main/resources/frontend/data.html
@@ -53,5 +53,7 @@
             </section>
         </main>
       </div>
+    <script src="/js/getUserId.js"></script>
+    <script src="/js/loadUserData.js"></script>
 </body>
 </html>
