--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -18,7 +18,13 @@
                 <a href="/" class="menu__option">Main</a>
                 <a href="/data" class="menu__option">Manage personal data</a>
                 <a href="/personal-lots" class="menu__option">Manage my lots</a>
-                <div class="menu__option menu__option_right">Log out</div>
+                <button class="menu__option menu__option_right" type="button" value="Log out" id="log-out-button">Log out</button>
+                <script>
+                    var registerButton = document.getElementById('log-out-button');
+                    function redirectToRegisterPage() {
+                        window.location.href = '/login';
+                    }
+                    registerButton.addEventListener('click', redirectToRegisterPage);</script>
                 <a href="/balance" class="menu__option">Top up balance</a>
             </section>
             <section class="cards">
