--- a/main-auction-service/src/main/resources/frontend/balance.html
+++ b/main-auction-service/src/main/resources/frontend/balance.html
@@ -24,10 +24,10 @@
                 <div class="registration-form__field">
                     <label for="initialPrice" class="registration-form__label">Enter the deposit amount:</label>
                     <input class="registration-form__input" type="text" id="initialPrice" name="initialPrice"
-                           placeholder="Enter a number separated by a dot, for example: 123.456" required>
+                           placeholder="Enter a number separated by a dot, for ex: 123.456" required>
                 </div>
 
-                <div class="registration-form__field registration-form__field_radio registration-form__field_radio-small">
+                <div class="registration-form__field registration-form__field_radio">
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="RUB" id="rub">
                         <label class="registration-form__radio__mock" for="rub"></label>
