frontend bug fixes

--- a/main-auction-service/src/main/resources/frontend/login.html
+++ b/main-auction-service/src/main/resources/frontend/login.html
@@ -25,8 +25,8 @@
                             <label for="password" class="registration-form__label">Password:</label>
                             <input class="registration-form__input" id="password" type="password" name="password"/>
                         </div>
+                        <input class="registration-form__button registration-form__button_secondary" type="button" value="Register" id="register-button" />
                         <input class="registration-form__button" type="submit" value="Log in" />
-                        <input class="registration-form__button" type="button" value="Registry" id="register-button" />
                         <script>
                             var registerButton = document.getElementById('register-button');
                             function redirectToRegisterPage() {
