--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -34,7 +34,7 @@
                     <label for="bet-value" class="registration-form__label">New bet:</label>
                     <input class="registration-form__input" type="text" id="bet-value" name="bet-value" required>
                 </div>
-                <div class="registration-form__field registration-form__field_radio registration-form__field_radio-small">
+                <div class="registration-form__field registration-form__field_radio">
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="RUB" id="rub">
                         <label class="registration-form__radio__mock" for="rub"></label>
