--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -47,5 +47,6 @@
     <script src="/js/getUserId.js"></script>
     <script src="/js/gallery.js"></script>
     <script src="/js/getLotsByUser.js"></script>
+    <script src="/js/preventDefault.js"></script>
 </body>
 </html>
