--- a/main-auction-service/src/main/resources/frontend/register.html
+++ b/main-auction-service/src/main/resources/frontend/register.html
@@ -46,8 +46,8 @@
                         <label for="password-confirm" class="registration-form__label">Confirm your password:</label>
                         <input class="registration-form__input" type="password" id="password-confirm" name="password-confirm" required>
                     </div>
+                    <input class="registration-form__button registration-form__button_secondary" type="button" value="Log in" id="log-in-button" />
                     <button type="submit" class="registration-form__button" onclick="registration()">Register</button>
-                    <input class="registration-form__button" type="button" value="Log in" id="log-in-button" />
                     <script>
                         var registerButton = document.getElementById('log-in-button');
                         function redirectToRegisterPage() {
