--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -35,5 +35,6 @@
     <script src="/js/getUserId.js"></script>
     <script src="/js/gallery.js"></script>
     <script src="/js/account.js"></script>
+    <script src="/js/preventDefault.js"></script>
     </body>
 </html>
