Images switch on lot page

--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -56,6 +56,7 @@
         </section>
     </main>
 </div>
+<script src="/js/gallery.js"></script>
 <script src="/js/makeBet.js"></script>
 <script src="/js/currency.js"></script>
 <script src="/js/lot.js"></script>
