--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -10,7 +10,7 @@
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
-            <h1 class="header__title">BMSTU732</h1>
+            <h1 class="header__title">name</h1>
             <a href="/account" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
