some changes (correctly logout)

--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -22,7 +22,7 @@
                 <script>
                     var registerButton = document.getElementById('log-out-button');
                     function redirectToRegisterPage() {
-                        window.location.href = '/login';
+                        window.location.href = '/logout';
                     }
                     registerButton.addEventListener('click', redirectToRegisterPage);</script>
                 <a href="/balance" class="menu__option">Top up balance</a>
