--- a/main-auction-service/src/main/resources/frontend/new-lot.html
+++ b/main-auction-service/src/main/resources/frontend/new-lot.html
@@ -33,7 +33,7 @@
                 <div class="registration-form__field">
                     <label for="images" class="registration-form__label">Image URLs:</label>
                     <textarea class="registration-form__input registration-form__textarea" id="images"
-                              name="images"></textarea>
+                              name="images" placeholder="Write each link from a new line"></textarea>
                 </div>
 
                 <div class="registration-form__field">
